SERVER-47233 Consider WriteOp complete when no shards left to target