src/mongo/s/write_ops/write_op.cpp
@@ -98,7 +98,9 @@ void WriteOp::targetWrites(OperationContext* opCtx,
         _childOps.back().state = WriteOpState_Pending;
     }
 
-    _state = WriteOpState_Pending;
+    // If all operations currently targeted were successful on a previous round we might have 0
+    // childOps, that would mean that the operation is finished.
+    _state = _childOps.size() ? WriteOpState_Pending : WriteOpState_Completed;
 }
 
 size_t WriteOp::getNumTargeted() {
